src/components/CheckedLabel/CheckedLabel.scss
@use '../variables';

$block: '.#{variables.$ns}checked-label';

#{$block} {
    display: inline-flex;
    font-family: var(--yc-text-body-font-family);
    font-weight: normal;
    color: var(--yc-color-text-primary);
    user-select: none;
    touch-action: manipulation;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    cursor: pointer;

    &_disabled {
        cursor: default;
        pointer-events: none;
    }

    &_size_m {
        font-size: 13px;
        line-height: 15px;
    }

    &_size_l {
        font-size: 15px;
        line-height: 18px;
    }

    &__text {
        align-self: center;
        white-space: normal;

        #{$block}_disabled & {
            opacity: 0.6;
        }

        #{$block}_size_m & {
            margin-left: 5px;
        }

        #{$block}_size_l & {
            margin-left: 7px;
        }
    }
}

